[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/georgia.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/PauseMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 1 )

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.196078 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -472.0
margin_top = -260.0
margin_right = 472.0
margin_bottom = 260.0
size_flags_horizontal = 13
size_flags_vertical = 13
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 944.0
margin_bottom = 520.0

[node name="Spacer" type="ColorRect" parent="MarginContainer/HBoxContainer"]
margin_right = 312.0
margin_bottom = 520.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 1, 1, 1, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 316.0
margin_right = 628.0
margin_bottom = 520.0
size_flags_horizontal = 7
size_flags_vertical = 5
custom_constants/separation = 30
alignment = 1

[node name="Resume" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 151.0
margin_right = 312.0
margin_bottom = 186.0
custom_fonts/font = SubResource( 1 )
text = "Resume"

[node name="VolumeHBox" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 216.0
margin_right = 312.0
margin_bottom = 245.0
grow_vertical = 0
size_flags_horizontal = 3
alignment = 1

[node name="Volume" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/VolumeHBox"]
margin_right = 154.0
margin_bottom = 29.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "Volume: "
valign = 1

[node name="VolumeSlider" type="HSlider" parent="MarginContainer/HBoxContainer/VBoxContainer/VolumeHBox"]
margin_left = 158.0
margin_top = 6.0
margin_right = 312.0
margin_bottom = 22.0
rect_min_size = Vector2( 75, 0 )
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0
tick_count = 10
ticks_on_borders = true

[node name="SensitivityHBox" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 275.0
margin_right = 312.0
margin_bottom = 304.0
grow_vertical = 0
size_flags_horizontal = 3
alignment = 1

[node name="Sensitivity" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/SensitivityHBox"]
margin_right = 154.0
margin_bottom = 29.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "Sensitivity: "
valign = 1

[node name="SensitivitySlider" type="HSlider" parent="MarginContainer/HBoxContainer/VBoxContainer/SensitivityHBox"]
margin_left = 158.0
margin_top = 6.0
margin_right = 312.0
margin_bottom = 22.0
rect_min_size = Vector2( 75, 0 )
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 0.05
max_value = 1.0
step = 0.05
value = 0.5
tick_count = 10
ticks_on_borders = true

[node name="Quit" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 334.0
margin_right = 312.0
margin_bottom = 369.0
custom_fonts/font = SubResource( 1 )
text = "Quit"

[node name="Spacer2" type="ColorRect" parent="MarginContainer/HBoxContainer"]
margin_left = 632.0
margin_right = 944.0
margin_bottom = 520.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 1, 1, 1, 0 )

[node name="Paused" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -512.0
margin_top = 30.0
margin_right = 512.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 3 )
text = "Paused"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="value_changed" from="MarginContainer/HBoxContainer/VBoxContainer/VolumeHBox/VolumeSlider" to="." method="_on_VolumeSlider_value_changed"]
[connection signal="value_changed" from="MarginContainer/HBoxContainer/VBoxContainer/SensitivityHBox/SensitivitySlider" to="." method="_on_SensitivitySlider_value_changed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
